--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "rs_osrm"
-version = "0.1.4"
+version = "0.2.0"
 license = "MIT"
 authors = ["Ronny Karlsson <mafiapro@live.se>"]
 edition = "2018"
 description = "rust wrapper for osrm"
+repository = "https://github.com/TehGoat/rs_osrm"
+keywords = ["osrm"]
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
