--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "rs_osrm"
-version = "0.2.0"
+version = "0.2.1"
 license = "MIT"
 authors = ["Ronny Karlsson <mafiapro@live.se>"]
 edition = "2018"
 description = "rust wrapper for osrm"
 repository = "https://github.com/TehGoat/rs_osrm"
 keywords = ["osrm"]
+readme = "README.md"
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
